[package]
name = "advent18"
description = "Solutions for Advent of Code 2018."
version = "0.1.0"
authors = ["Georg Brandl <georg@python.org>"]
edition = "2018"

[[bench]]
name = "days"
harness = false

[dependencies]
advtools = { version = "0.5.0", path = "../advtools" }
petgraph = "0.5"
strum = "0.17.1"
strum_macros = "0.17.1"
once_cell = "1.2.0"
priority-queue = "0.6.0"

[dev-dependencies]
criterion = { version = "0.3.0", default-features = false }
