[package]
name = "advent18"
description = "Solutions for Advent of Code 2018."
version = "0.1.0"
authors = ["Georg Brandl <georg@python.org>"]
edition = "2018"

[[bench]]
name = "days"
harness = false

[dependencies]
advtools = { version = "0.6.0", path = "../advtools" }
petgraph = "0.5.1"
strum = "0.20.0"
strum_macros = "0.20.1"
once_cell = "1.5.2"
priority-queue = "1.0.3"

[dev-dependencies]
criterion = { version = "0.3.3", default-features = false }
