[package]
name = "advent18"
description = "Solutions for Advent of Code 2018."
version = "0.1.0"
authors = ["Georg Brandl <georg@python.org>"]
edition = "2021"

[[bench]]
name = "days"
harness = false

[dependencies]
advtools = { version = "0.7.0", path = "../advtools" }
petgraph = "0.6.0"
strum = "0.21.0"
strum_macros = "0.21.1"
priority-queue = "1.0.3"

[dev-dependencies]
criterion = { version = "0.3.3", default-features = false }
